Revert "fix: improve styling on mobile"
This reverts commit 9e74118e19a565469caa14412532502fd81f2067.

--- a/web-example/src/components/Main.module.css
+++ b/web-example/src/components/Main.module.css
@@ -1,4 +1,5 @@
 .main {
+  min-height: 75vh;
   height: 100%;
   overflow: hidden;
   transition: min-height 0.2s ease-in-out;
@@ -12,4 +13,8 @@
   @media screen and (min-width: 740px) {
     width: 100%;
   }
+}
+
+.shrink {
+  min-height: 20vh;
 }
